--- a/app/views/events/index.html
+++ b/app/views/events/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
         <head>
             <meta charset="utf-8" />
             <title>La liste des stages</title>
-            <link rel="stylesheet" href="style.css" />
+			<link rel="stylesheet" href="../assets/stylesheets/style.css" />
         </head>
 
         <body>
@@ -15,9 +15,9 @@
                     <tr>
                         <th>Nom</th>
                         <th>Période</th>
-                        <th>Détail</th>
-                        <th>Modifier</th>
-                        <th>Supprimer</th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
                     </tr>
                 </thead>
 
