--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
   <head>
     <meta charset="utf-8" />
@@ -14,7 +14,6 @@
         <li><a href="../../controllers/member_controller.php">Les stagiaires</a></li>
       </ul>
     </nav>
-    <h1>S'inscrire aux stages</h1>
 
   </body>
 
