--- a/app/views/events_members/index.html
+++ b/app/views/events_members/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <title>S'inscrire aux stages</title>
     <link rel="stylesheet" href="../assets/stylesheets/style.css" />
+    <script src="../assets/javascripts/jquery-2.2.3.min.js"></script>
+    <script src="../assets/javascripts/application.js"></script>
   </head>
 
   <body>
@@ -19,17 +21,23 @@
 		<table>
 		  <thead>
 			  <tr>
-				  <td>Membre</td>
-   				  {foreach from=$stages item=stage}
-				  <td>{$stage->nom}</td>
+				  <td></td>
+   				  {foreach from=$events item=event}
+				  <td>{$event->nom}</td>
 				  {/foreach}
 			  </tr>
 		  </thead>	
           {foreach from=$members item=member}
           <tr>
 			<td>{$member->prenom} {$member->nom}</td>
-			{foreach from=$stages item=stage}
-			<td><input type="checkbox" class="stage_{$stage->id}" value={$member->id}></td>
+			{foreach from=$events item=event}
+				
+				{if $subscriptions[$member->id][$event->id] == 1}
+					<td><input type="checkbox" class="inscrire" data-stage-id="{$event->id}" data-member-id="{$member->id}" value="" checked="checked"></td>
+				{else}
+					<td><input type="checkbox" class="inscrire" data-stage-id="{$event->id}" data-member-id="{$member->id}" value=""></td>
+				{/if}
+
 			{/foreach}
 		  </tr>
           {/foreach}
