--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -12,6 +12,7 @@
       <ul>
         <li><a href="../../controllers/event_controller.php">Les stages</a></li>
         <li><a href="../../controllers/member_controller.php">Les stagiaires</a></li>
+        <li><a href="../../controllers/events_member_controller.php">Les inscriptions</a></li>
       </ul>
     </nav>
 
