amélioration des titres (pour historique et bookmarks)

--- a/app/views/members/index.html
+++ b/app/views/members/index.html
@@ -3,7 +3,7 @@
 
         <head>
             <meta charset="utf-8" />
-            <title>La liste des stagiaires</title>
+            <title>Oxygène : La liste des stagiaires</title>
             <link rel="stylesheet" href="../assets/stylesheets/style.css" />
         </head>
 
