--- a/app/views/events/index.html
+++ b/app/views/events/index.html
@@ -3,7 +3,7 @@
 
         <head>
             <meta charset="utf-8" />
-            <title>La liste des stages</title>
+            <title>Oxygène : La liste des stages</title>
 			<link rel="stylesheet" href="../assets/stylesheets/style.css" />
         </head>
 
