--- a/app/views/events_members/index.html
+++ b/app/views/events_members/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8" />
-    <title>S'inscrire aux stages</title>
+    <title>Oxygène : S'inscrire aux stages</title>
     <link rel="stylesheet" href="../assets/stylesheets/style.css" />
     <script src="../assets/javascripts/jquery-2.2.3.min.js"></script>
     <script src="../assets/javascripts/application.js"></script>
