--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8" />
-    <title>S'inscrire aux stages</title>
+    <title>Oxygène : S'inscrire aux stages</title>
     <link rel="stylesheet" href="../../assets/stylesheets/style.css" />
   </head>
 
