--- a/app/views/events_members/index.html
+++ b/app/views/events_members/index.html
@@ -16,7 +16,7 @@
         <li><a href="../controllers/member_controller.php">Les stagiaires</a></li>
       </ul>
     </nav>
-    
+
     <form>
 		<table>
 		  <thead>
@@ -26,13 +26,13 @@
 				  <td>{$event->nom}</td>
 				  {/foreach}
 			  </tr>
-		  </thead>	
+		  </thead>
           {foreach from=$members item=member}
           <tr>
 			<td>{$member->prenom} {$member->nom}</td>
 			{foreach from=$events item=event}
-				
-				{if $subscriptions[$member->id][$event->id] == 1}
+
+				{if in_array([$event->id, $member->id], $subscriptions)}
 					<td><input type="checkbox" class="inscrire" data-stage-id="{$event->id}" data-member-id="{$member->id}" value="" checked="checked"></td>
 				{else}
 					<td><input type="checkbox" class="inscrire" data-stage-id="{$event->id}" data-member-id="{$member->id}" value=""></td>
