--- a/app/views/events/index.html
+++ b/app/views/events/index.html
@@ -1,38 +1,46 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-        <head>
-            <meta charset="utf-8" />
-            <title>Oxygène : La liste des stages</title>
-			<link rel="stylesheet" href="../assets/stylesheets/style.css" />
-        </head>
+  <head>
+    <meta charset="utf-8" />
+    <title>Oxygène : La liste des stages</title>
+    <link rel="stylesheet" href="../assets/stylesheets/style.css" />
+  </head>
 
-        <body>
-            <h1>La liste des stages</h1>
+  <body>
+     <nav>
+        <ul>
+          <li><a href="../controllers/event_controller.php?action=new">Nouveau stage</a></li>
+          <li><a href="../controllers/member_controller.php">Les stagiaires</a></li>
+          <li><a href="../controllers/events_member_controller.php">Les inscriptions</a></li>
+        </ul>
+      </nav>
 
-            <table>
-                <thead>
-                    <tr>
-                        <th>Nom</th>
-                        <th>Période</th>
-                        <th></th>
-                        <th></th>
-                        <th></th>
-                    </tr>
-                </thead>
+      <h1>La liste des stages</h1>
 
-                <tbody>
-                    {foreach from=$events item=event}
-                    <tr>
-                        <td>{$event->nom}</td>
-                        <td>{$event->periode}</td>
-                        <td><a href="event_controller.php?action=show&id={$event->id}">Détail</a></td>
-                        <td><a href="event_controller.php?action=edit&id={$event->id}">Modifier</a></td>
-                        <td><a href="event_controller.php?action=delete&id={$event->id}">Supprimer</a></td>
-                    </tr>
-                    {/foreach}
-                </tbody>
-            </table>
-        </body>
+      <table>
+          <thead>
+              <tr>
+                  <th>Nom</th>
+                  <th>Période</th>
+                  <th></th>
+                  <th></th>
+                  <th></th>
+              </tr>
+          </thead>
+
+          <tbody>
+              {foreach from=$events item=event}
+              <tr>
+                  <td>{$event->nom}</td>
+                  <td>{$event->periode}</td>
+                  <td><a href="event_controller.php?action=show&id={$event->id}">Détail</a></td>
+                  <td><a href="event_controller.php?action=edit&id={$event->id}">Modifier</a></td>
+                  <td><a href="event_controller.php?action=delete&id={$event->id}">Supprimer</a></td>
+              </tr>
+              {/foreach}
+          </tbody>
+      </table>
+  </body>
 
 </html>
