--- a/app/views/events/index.html
+++ b/app/views/events/index.html
@@ -36,7 +36,7 @@
                   <td>{$event->periode}</td>
                   <td><a href="event_controller.php?action=show&id={$event->id}">Détail</a></td>
                   <td><a href="event_controller.php?action=edit&id={$event->id}">Modifier</a></td>
-                  <td><a href="event_controller.php?action=delete&id={$event->id}">Supprimer</a></td>
+                  <td><a href="event_controller.php?action=destroy&id={$event->id}">Supprimer</a></td>
               </tr>
               {/foreach}
           </tbody>
