--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -7,12 +7,13 @@ nav ul{
 }
 nav li{
   display: inline-block;
-  padding:1em;
 }
 nav li:hover{
   background-color: #abb;
 }
 nav a{
+  display:block;
+  padding:1em;
   text-decoration: none;
 }
 table{
