--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,6 +1,7 @@
 body {
   font:16px Arial, sans-serif;
 }
+h1{text-align:center}
 nav ul{
   padding:0;
   background: #dbb;
@@ -27,3 +28,5 @@ th, td{
   padding:1em;
   border:none;
 }
+.inscrit_pour_tri{display:none}
+td.inscription{text-align:center}
