mise en forme des formulaires de crétion / mise à jour

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -30,3 +30,9 @@ th, td{
 }
 .inscrit_pour_tri{display:none}
 td.inscription{text-align:center}
+
+label{
+  display:inline-block;
+  width:6em;
+  margin:0.5em 0;
+  }
