--- a/app/views/members/new.html
+++ b/app/views/members/new.html
@@ -5,87 +5,93 @@
     <meta charset="utf-8" />
     <title>Oxygène : Nouveau stagiaires</title>
     <link rel="stylesheet" href="../assets/stylesheets/style.css" />
+    <link rel="stylesheet" href="../assets/stylesheets/jquery-ui-1.11.4.custom/jquery-ui.css" />
   </head>
 
   <body>
-     <nav>
-        <ul>
-          <li><a href="../controllers/event_controller.php">Les stages</a></li>
-          <li><a href="../controllers/member_controller.php">Les stagiaires</a></li>
-          <li><a href="../controllers/events_member_controller.php">Les inscriptions</a></li>
-        </ul>
-      </nav>
+    <nav>
+      <ul>
+        <li><a href="../controllers/event_controller.php">Les stages</a></li>
+        <li><a href="../controllers/member_controller.php">Les stagiaires</a></li>
+        <li><a href="../controllers/events_member_controller.php">Les inscriptions</a></li>
+      </ul>
+    </nav>
 
-      <h1>Nouveau stagiaire</h1>
+    <h1>Nouveau stagiaire</h1>
 
-      <form action="../controllers/member_controller.php?action=create" method="POST">
-        <div>
-          <label>Nom</label>
-          <input type="text" name="nom" />
-        </div>
-        <div>
-          <label>Prénom</label>
-          <input type="text" name="prenom" />
-        </div>
-        <div>
-          <label>date de naissance</label>
-          <input type="text" name="datenaissance" value="{$member->datenaissance}" />
-        </div>
-        <div>
-          <label>adresse</label>
-          <input type="text" name="adresse" value="{$member->adresse}" />
-        </div>
-        <div>
-          <label>CP</label>
-          <input type="text" name="cp" value="{$member->cp}" />
-        </div>
-        <div>
-          <label>ville</label>
-          <input type="text" name="ville" value="{$member->ville}" />
-        </div>
-        <div>
-          <label>email</label>
-          <input type="text" name="email" value="{$member->email}" />
-        </div>
-        <div>
-          <label>tel fixe</label>
-          <input type="text" name="telfixe" value="{$member->telfixe}" />
-        </div>
-        <div>
-          <label>tel portable</label>
-          <input type="text" name="telportable" value="{$member->telportable}" />
-        </div>
-        <div>
-          <label>niveau</label>
-          <input type="text" name="niveau" value="{$member->niveau}" />
-        </div>
-        <div>
-          <label>photo</label>
-          <input type="text" name="photo" value="{$member->photo}" />
-        </div>
-        <div>
-          <label>observation</label>
-          <input type="text" name="observation" value="{$member->observation}" />
-        </div>
-        <div>
-          <label>date adhésion</label>
-          <input type="text" name="date_adh" value="{$member->date_adh}" />
-        </div>
-        <div>
-          <label>mono</label>
-          <input type="text" name="mono" value="{$member->mono}" />
-        </div>
-        <div>
-          <label>diplôme</label>
-          <input type="text" name="diplome" value="{$member->diplome}" />
-        </div>
-        <div>
-          <label>photo2</label>
-          <input type="text" name="photo2" value="{$member->photo2}" />
-        </div>
+    <form action="../controllers/member_controller.php?action=create" method="POST">
+      <div>
+        <label>Nom</label>
+        <input type="text" name="nom" />
+      </div>
+      <div>
+        <label>Prénom</label>
+        <input type="text" name="prenom" />
+      </div>
+      <div>
+        <label>date de naissance</label>
+        <input id="datenaissance" type="date" name="datenaissance" value="{$member->datenaissance}" />
+      </div>
+      <div>
+        <label>adresse</label>
+        <input type="text" name="adresse" value="{$member->adresse}" />
+      </div>
+      <div>
+        <label>CP</label>
+        <input type="text" name="cp" value="{$member->cp}" />
+      </div>
+      <div>
+        <label>ville</label>
+        <input type="text" name="ville" value="{$member->ville}" />
+      </div>
+      <div>
+        <label>email</label>
+        <input type="text" name="email" value="{$member->email}" />
+      </div>
+      <div>
+        <label>tel fixe</label>
+        <input type="text" name="telfixe" value="{$member->telfixe}" />
+      </div>
+      <div>
+        <label>tel portable</label>
+        <input type="text" name="telportable" value="{$member->telportable}" />
+      </div>
+      <div>
+        <label>niveau</label>
+        <input type="text" name="niveau" value="{$member->niveau}" />
+      </div>
+      <div>
+        <label>photo</label>
+        <input type="text" name="photo" value="{$member->photo}" />
+      </div>
+      <div>
+        <label>observation</label>
+        <input type="text" name="observation" value="{$member->observation}" />
+      </div>
+      <div>
+        <label>date adhésion</label>
+        <input id="date_adh" type="date" name="date_adh" value="{$member->date_adh}" />
+      </div>
+      <div>
+        <label>mono</label>
+        <input type="text" name="mono" value="{$member->mono}" />
+      </div>
+      <div>
+        <label>diplôme</label>
+        <input type="text" name="diplome" value="{$member->diplome}" />
+      </div>
+      <div>
+        <label>photo2</label>
+        <input type="text" name="photo2" value="{$member->photo2}" />
+      </div>
 
-        <input type="submit">
-      </form>
+      <input type="submit">
+    </form>
+
+    <script src="../assets/javascripts/jquery-2.2.3.min.js"></script>
+    <script src="../assets/javascripts/jquery-ui-1.11.4.custom/jquery.ui.datepicker-fr.min.js"></script>
+    <script src="../assets/javascripts/jquery-ui-1.11.4.custom/jquery-ui.min.js"></script>
+    <script src="../assets/javascripts/application.js"></script>
   </body>
 
 </html>
