--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -39,3 +39,9 @@ label{
 label:first-letter{
   text-transform:capitalize;
 }
+.edit{
+  display:inline-block;
+  height:16px;
+  width:16px;
+  background:url(../images/page_edit.png) no-repeat 0 0;
+}
