erreur car datepicker est appelé systématiquement
=> inclure jQuery UI partout

--- a/app/views/events/index.html
+++ b/app/views/events/index.html
@@ -44,6 +44,8 @@
     </table>
 
     <script src="../assets/javascripts/jquery-2.2.3.min.js"></script>
+    <script src="../assets/javascripts/jquery-ui-1.11.4.custom/jquery.ui.datepicker-fr.min.js"></script>
+    <script src="../assets/javascripts/jquery-ui-1.11.4.custom/jquery-ui.min.js"></script>
     <script src="../assets/javascripts/tablesaw.js"></script>
     <script src="../assets/javascripts/application.js"></script>
   </body>
