--- a/app/views/members/edit.html
+++ b/app/views/members/edit.html
@@ -22,7 +22,7 @@
     <form action="../controllers/member_controller.php?action=update&id={$member->id}" method="post">
       <div>
         <label>Masquer</label>
-        <input type="checkbox" name="masquer" value="1" {($member->masquer == '1') ? "checked='checked'" : ''} />
+        <input type="checkbox" name="masque" value="1" {($member->masque == '1') ? "checked='checked'" : ''} />
       </div>
       <div>
         <label>Nom</label>
