rappel du stagiaire + stage sur la page de modification d'inscription

--- a/app/views/events_members/edit.html
+++ b/app/views/events_members/edit.html
@@ -16,7 +16,7 @@
       </ul>
     </nav>
 
-    <h1>Modifier une inscription</h1>
+    <h1>Modifier l'inscription de {$events_member->prenom} {$events_member->nom} pour le stage&nbsp;: {$events_member->lieu}</h1>
 
     <form action="../controllers/events_member_controller.php?action=update&id={$events_member->id}" method="post">
       <div>
