--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -39,9 +39,14 @@ label{
 label:first-letter{
   text-transform:capitalize;
 }
-.edit{
+.edit, .bin{
   display:inline-block;
   height:16px;
   width:16px;
+}
+.edit{
   background:url(../images/page_edit.png) no-repeat 0 0;
+}
+.bin{
+  background:url(../images/bin.png) no-repeat 0 0;
 }
